# C-Minus-Compiler

./: Cargo.toml  README.md
c-minus-lexer/: Cargo.toml
c-minus-lexer/examples/: simple.rs
c-minus-lexer/src/: dfa.rs  lexer.rs  lib.rs  regex_lexer.rs
c-minus-parser/: Cargo.toml
c-minus-parser/src/: lib.rs  recursive_descent_parser.rs  symbol_checker.rs  symbol_manager.rs  symbol_parser.rs  syntax_tree.rs
c-minus-token/: Cargo.toml
c-minus-token/src/: lib.rs
examples/: simple_parse.rs
src/: main.rs
tests/: test.c-  test_lexer_and_parser.rs
